// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The filterable table headers component only renders elements that are searchable 1`] = `
<tr
  className="jsx-870174952"
  onKeyDown={[Function]}
>
  <td
    className="jsx-870174952"
    key="testtest"
  />
  <td
    className="jsx-870174952"
    key="test2test2"
  />
  <td
    className="jsx-870174952"
    key="test3test3"
  >
    <FormControl
      aria-label="filter-by-test3"
      name="test3"
      onChange={[Function]}
      placeholder="Search"
      value=""
    />
  </td>
  <td
    className="jsx-870174952 flex"
  >
    <Button
      active={false}
      disabled={false}
      onClick={[Function]}
      variant="outline-secondary"
    >
      Clear
    </Button>
    <Button
      active={false}
      disabled={false}
      onClick={[Function]}
      style={
        Object {
          "marginLeft": "5px",
        }
      }
      variant="primary"
    >
      Apply
    </Button>
  </td>
  <JSXStyle
    id="870174952"
  >
    .flex.jsx-870174952{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;}
  </JSXStyle>
</tr>
`;

exports[`The filterable table headers component renders a option input if values are provided 1`] = `
<tr
  className="jsx-870174952"
  onKeyDown={[Function]}
>
  <td
    className="jsx-870174952"
    key="testtest"
  >
    <FormControl
      aria-label="filter-by-test"
      as="select"
      name="test"
      onChange={[Function]}
      placeholder="Search"
      value=""
    >
      <option
        className="jsx-870174952"
        key="test-placeholder"
        value=""
      >
        ...
      </option>
      <option
        className="jsx-870174952"
        key="test-option1"
        value="optionvalue1"
      >
        Option1
      </option>
      <option
        className="jsx-870174952"
        key="test-option2"
        value="optionvalue2"
      >
        Option2
      </option>
    </FormControl>
  </td>
  <td
    className="jsx-870174952 flex"
  >
    <Button
      active={false}
      disabled={false}
      onClick={[Function]}
      variant="outline-secondary"
    >
      Clear
    </Button>
    <Button
      active={false}
      disabled={false}
      onClick={[Function]}
      style={
        Object {
          "marginLeft": "5px",
        }
      }
      variant="primary"
    >
      Apply
    </Button>
  </td>
  <JSXStyle
    id="870174952"
  >
    .flex.jsx-870174952{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;}
  </JSXStyle>
</tr>
`;

exports[`The filterable table headers component renders a text input if values are not provided 1`] = `
<tr
  className="jsx-870174952"
  onKeyDown={[Function]}
>
  <td
    className="jsx-870174952"
    key="testtest"
  >
    <FormControl
      aria-label="filter-by-test"
      name="test"
      onChange={[Function]}
      placeholder="Search"
      value=""
    />
  </td>
  <td
    className="jsx-870174952 flex"
  >
    <Button
      active={false}
      disabled={false}
      onClick={[Function]}
      variant="outline-secondary"
    >
      Clear
    </Button>
    <Button
      active={false}
      disabled={false}
      onClick={[Function]}
      style={
        Object {
          "marginLeft": "5px",
        }
      }
      variant="primary"
    >
      Apply
    </Button>
  </td>
  <JSXStyle
    id="870174952"
  >
    .flex.jsx-870174952{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;}
  </JSXStyle>
</tr>
`;

exports[`The filterable table headers component renders as many td elements as search options, plus one for the search buttons 1`] = `
<tr
  className="jsx-870174952"
  onKeyDown={[Function]}
>
  <td
    className="jsx-870174952"
    key="testtest"
  >
    <FormControl
      aria-label="filter-by-test"
      name="test"
      onChange={[Function]}
      placeholder="Search"
      value="a"
    />
  </td>
  <td
    className="jsx-870174952"
    key="test2test2"
  >
    <FormControl
      aria-label="filter-by-test2"
      name="test2"
      onChange={[Function]}
      placeholder="Search"
      value="b"
    />
  </td>
  <td
    className="jsx-870174952 flex"
  >
    <Button
      active={false}
      disabled={false}
      onClick={[Function]}
      variant="outline-secondary"
    >
      Clear
    </Button>
    <Button
      active={false}
      disabled={false}
      onClick={[Function]}
      style={
        Object {
          "marginLeft": "5px",
        }
      }
      variant="primary"
    >
      Apply
    </Button>
  </td>
  <JSXStyle
    id="870174952"
  >
    .flex.jsx-870174952{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;}
  </JSXStyle>
</tr>
`;

exports[`The filterable table headers component renders search and reset buttons 1`] = `
<tr
  className="jsx-870174952"
  onKeyDown={[Function]}
>
  <td
    className="jsx-870174952 flex"
  >
    <Button
      active={false}
      disabled={false}
      onClick={[Function]}
      variant="outline-secondary"
    >
      Clear
    </Button>
    <Button
      active={false}
      disabled={false}
      onClick={[Function]}
      style={
        Object {
          "marginLeft": "5px",
        }
      }
      variant="primary"
    >
      Apply
    </Button>
  </td>
  <JSXStyle
    id="870174952"
  >
    .flex.jsx-870174952{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;}
  </JSXStyle>
</tr>
`;
